<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PageLayout"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            style="@style/ContentLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_amount"
                style="@style/SettingsCaptionText"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_profile" />

            <TextView
                android:id="@+id/text_nick_name"
                style="@style/CaptionText"
                android:text="@string/text_name" />

            <EditText
                android:id="@+id/edittext_name"
                style="@style/EditTextSingleLineBox"
                android:layout_below="@+id/text_nick_name"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true" />

            <TextView
                android:id="@+id/text_settings"
                style="@style/SettingsCaptionText"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/text_settings" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/btn_radio_fingerprint"
                    style="@style/RadioButton"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/radio_text_enable_fingerprint" />

                <RadioButton
                    android:id="@+id/btn_radio_pinsetup"
                    style="@style/RadioButton"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/radio_text_enable_pin_login" />
            </RadioGroup>


            <TextView
                android:id="@+id/text_notifications"
                style="@style/SettingsCaptionText"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:visibility="gone"
                android:text="@string/text_notifications" />

            <CheckBox
                android:id="@+id/checkbox_payment_confirmations"
                style="@style/Checkbox"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="10dp"
                android:text="@string/radio_text_payment_confirmations"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/checkbox_receive_funds"
                style="@style/Checkbox"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="10dp"
                android:text="@string/radio_text_receive_funds"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
