<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include
        layout="@layout/title_bar"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    >

    <RelativeLayout
        style="@style/ContentLayout"
        >
    <TextView
        style="@style/CaptionText"
        android:id="@+id/text_from"
        android:layout_marginTop="10dp"
        android:text="@string/text_from"/>

    <include layout="@layout/select_account_layout"/>

    <TextView
        style="@style/CaptionText"
        android:id="@+id/text_to"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/account_row_layout"
        android:text="@string/text_to"/>

        <LinearLayout
            android:id="@+id/pay_type_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/text_to"
            android:weightSum="3"
            >

            <Button
                android:id="@+id/btn_existing"
                android:layout_width="0dp"
                style="@style/HgcPayLayoutButton"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@drawable/background_button_hgc"
                android:text="@string/btn_text_existing"
                android:singleLine="true"/>

            <Button
                android:id="@+id/btn_new"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/background_button_hgc"
                style="@style/HgcPayLayoutButton"
                android:text="@string/btn_text_new"/>

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="0dp"
                style="@style/HgcPayLayoutButton"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/background_button_hgc"
                android:text="@string/btn_text_scan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_btn_open_layout"
            android:layout_below="@+id/text_to"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edittext_account_name"
                    style="@style/EditTextSingleLineBox"
                    android:padding="10dp"
                    android:hint="name (optional)" />

                <TextView
                    style="@style/HgcPayClickableTextView"
                    android:id="@+id/text_cancel"
                    android:layout_margin="5dp"
                    android:text="@string/btn_text_cancel"/>

                    />


            </RelativeLayout>

            <EditText
                android:id="@+id/edittext_account_id"
                style="@style/EditTextSingleLineBox"
                android:hint="@string/edittext_hint_account_id"
                android:padding="10dp"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:id="@+id/amount_relative_layout"
             android:layout_below="@+id/pay_type_btn_layout">

            <TextView
                style="@style/CaptionText"
                android:id="@+id/text_amount"
                android:text="@string/text_amount"/>

             <include layout="@layout/view_amount_layout"
                 android:layout_below="@id/text_amount"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"/>

             <CheckBox
                 android:id="@+id/request_notification"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="-5dp"
                 android:text="@string/checkbox_request_notification"
                 style="@style/Checkbox"
                 android:visibility="gone"
                 android:layout_below="@+id/amount_layout"
                 />

             <CheckBox
                 android:id="@+id/add_note"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="-6dp"
                 android:text="@string/checkbox_add_note"
                 style="@style/Checkbox"
                 android:layout_below="@+id/amount_layout"
                 />

             <TextView
                 style="@style/CaptionText"
                 android:id="@+id/text_fee"
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/add_note"
                 android:text="@string/text_fee"/>

             <TextView
                 style="@style/CaptionText"
                 android:id="@+id/text_fee_value"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/text_fee"
                 android:layout_below="@+id/add_note"
                 android:paddingLeft="5dp"
                 android:gravity="center_vertical|center"
                 android:drawableLeft="@drawable/textdrawable_icon_size"
                 android:text="@string/text_hgc_value"/>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/styrenea_regular"
                     android:id="@+id/text_note"
                     android:textSize="13sp"
                     android:layout_below="@+id/text_fee"
                     android:visibility="gone"
                     android:text="@string/text_note"/>

                 <EditText
                     android:id="@+id/edittext_note"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_marginTop="5dp"
                     android:gravity="top"
                     android:padding="5dp"
                     android:visibility="gone"
                     android:textCursorDrawable="@drawable/edittext_cursor_view"
                     android:background="@drawable/user_inform_edittext_background"
                     android:layout_below="@id/text_note"
                     />

             <Button
                 android:id="@+id/btn_pay"
                 style="@style/HgcButton"
                 android:layout_width="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/edittext_note"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/btn_text_pay"
                 android:visibility="visible"/>

         </RelativeLayout>

    </RelativeLayout>
</ScrollView>
</LinearLayout>
