<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/background_title_bar"
        >

        <TextView
            android:id="@+id/text_account_name"
            android:text="@string/text_account"
            style="@style/PrimaryTextRow"
            />

        <TextView
            android:id="@+id/text_account_is_verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_unverified"
            android:layout_alignParentRight="true"
            style="@style/SmallTextRow"
            android:textColor="@color/negative"
            android:layout_alignBaseline="@+id/text_account_name"
            />

        <TextView
            android:id="@+id/text_account_id"
            style="@style/KeyTextView"
            android:text="@string/text_account_id_value"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/text_account_name"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"></View>
</LinearLayout>

